# SCTools

./: .gitignore  README.md  pge.py  pyproject.toml
SCTools/: __init__.py  _shared.py  _version.py  io.py  pl.py  pp.py  tl.py
tests/: test_io.py  test_pp.py  test_shared.py  test_tl_outliers.py
