[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SCTools"
version = "0.1.0"
description = "Single-cell Pegasus/Scanpy utilities and AnnData on-disk helpers."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Donghoon Lee" }
]
dependencies = [
  "anndata>=0.9",
  "h5py>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
analysis = [
  "adjustText>=0.8",
  "matplotlib>=3.7",
  "numpy-groupies>=0.10",
  "pegasuspy>=1.10.2",
  "scanpy>=1.9",
  "scikit-learn>=1.3",
  "seaborn>=0.13",
]

[tool.setuptools]
packages = ["SCTools"]
py-modules = ["pge"]
